overlay/my-sno-cluster/get-a-username/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: get-a-username
  namespace: guides
  labels:
    app: get-a-username
spec:
  host: ""
  to:
    kind: Service
    name: get-a-username
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
