overlay/my-sno-cluster/get-a-username/test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guides
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: get-a-username
  name: get-a-username
  namespace: guides
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    targetPort: 8080
  selector:
    app: get-a-username
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
  namespace: guides
spec:
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: get-a-username
  name: get-a-username
  namespace: guides
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get-a-username
  template:
    metadata:
      labels:
        app: get-a-username
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: get-a-username-config
        - secretRef:
            name: get-a-username-secret
        image: quay.io/openshiftlabs/username-distribution:1.4
        name: get-a-username
        ports:
        - containerPort: 8080
          name: 8080-tcp
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: guides
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - env:
        - name: REDIS_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: redis
        image: registry.redhat.io/rhel9/redis-6:latest
        livenessProbe:
          tcpSocket:
            port: 6379
        name: redis
        ports:
        - containerPort: 6379
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - test "$(redis-cli -h 127.0.0.1 -a $REDIS_PASSWORD ping)" == "PONG"
        volumeMounts:
        - mountPath: /var/lib/redis/data
          name: redis-data
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: get-a-username
  name: get-a-username
  namespace: guides
spec:
  host: ""
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: get-a-username
    weight: 100
  wildcardPolicy: None
